Register page updated

--- a/assets/language/bn.json
+++ b/assets/language/bn.json
@@ -1319,7 +1319,6 @@
   "enter_name": "নাম লিখুন",
   "timed_out_please_try_again_after_few_minutes": "সময় উত্তীর্ণ হয়েছে। দয়া করে কয়েক মিনিট পর আবার চেষ্টা করুন",
   "from_you": "দূরে",
-
   "enter_your_pick_up_point": "আপনার পিকআপ পয়েন্ট লিখুন",
   "trip_location": "ভ্রমণের স্থান",
   "pickup_time": "পিকআপ সময়",
@@ -1431,13 +1430,13 @@
   "make_payment": "পেমেন্ট করুন",
   "select_from_map": "ম্যাপ থেকে নির্বাচন করুন",
   "pickup_address": "পিকআপ ঠিকানা",
-  "new_arrival" : "নতুন আগমন",
+  "new_arrival": "নতুন আগমন",
   "you_can_not_add_more_then": "আপনি এর চেয়ে বেশি যোগ করতে পারবেন না",
   "you_cannot_select_before_current_time": "আপনি বর্তমান সময়ের আগে নির্বাচন করতে পারবেন না",
   "overall_rating": "সামগ্রিক রেটিং",
   "your_trip_is": "আপনার ভ্রমণ হল",
   "proceed": "অগ্রসর হোন",
-  "code" : "কোড",
+  "code": "কোড",
   "you_are_not_logged_in_to_explore_feature": "আপনি লগ ইন করেননি। এই ফিচারটি ব্যবহার করতে, দয়া করে লগ ইন করুন।",
   "set_pickup_location": "পিকআপ অবস্থান সেট করুন",
   "set_destination_location": "গন্তব্য অবস্থান সেট করুন",
@@ -1446,7 +1445,6 @@
   "trips": "ভ্রমণসমূহ",
   "your_cart_is_empty": "আপনার কার্ট খালি",
   "please_enter_valid_estimate_time": "দয়া করে একটি বৈধ আনুমানিক সময় লিখুন",
-
   "payment_failed": "পেমেন্ট ব্যর্থ হয়েছে",
   "vendor_registration": "বিক্রেতা নিবন্ধন",
   "vendor_info": "বিক্রেতার তথ্য",
@@ -1497,5 +1495,35 @@
   "are_you_sure_you_want_to_update_trip_duration_to": "আপনি কি নিশ্চিত যে আপনি ভ্রমণের সময়কাল আপডেট করতে চান?",
   "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "আপনার কার্ট খালি করা হয়েছে কারণ নির্বাচিত অঞ্চল পূর্বের পিকআপ পয়েন্ট সমর্থন করে না।",
   "you_cant_add_more_than": "আপনি এর চেয়ে বেশি যোগ করতে পারবেন না",
-  "quantities_of_this_vehicle": "এই যানবাহনের পরিমাণ"
+  "quantities_of_this_vehicle": "এই যানবাহনের পরিমাণ",
+  "please_enter_required_fields": "প্রয়োজনীয় ঘরগুলি পূরণ করুন",
+  "user_name1": "ব্যবহারকারীর নাম",
+  "user_type": "ব্যবহারকারীর ধরন",
+  "enter_code": "কোড লিখুন",
+  "whatsApp_number": "হোয়াটসঅ্যাপ নম্বর",
+  "alternate_whatsApp_number": "বিকল্প হোয়াটসঅ্যাপ নম্বর",
+  "whatsApp_number_2": "হোয়াটসঅ্যাপ নম্বর ২",
+  "alternate_phone": "বিকল্প ফোন",
+  "phone_2": "ফোন ২",
+  "landmark": "ল্যান্ডমার্ক",
+  "area": "এলাকা",
+  "taluka": "তালুক",
+  "district": "জেলা",
+  "city": "শহর",
+  "state": "রাজ্য",
+  "pincode": "পিনকোড",
+  "date_of_birth": "জন্ম তারিখ",
+  "select_your_dob": "আপনার জন্মতারিখ নির্বাচন করুন",
+  "opens_at": "খুলবে",
+  "closes_at": "বন্ধ হবে",
+  "route": "রুট",
+  "subroute": "সাবরুট",
+  "zone_id": "জোন আইডি",
+  "gst_number": "GST নম্বর",
+  "gst_no.": "GST নম্বর",
+  "pan_card_number": "প্যান কার্ড নম্বর",
+  "pan_no.": "প্যান নম্বর",
+  "upload_documents": "ডকুমেন্ট আপলোড করুন",
+  "pan_card": "প্যান কার্ড",
+  "shop_image": "দোকানের ছবি"
 }
