--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -1319,7 +1319,6 @@
   "enter_name": "Introduzca el nombre",
   "timed_out_please_try_again_after_few_minutes": "Se agotó el tiempo. Inténtalo de nuevo después de unos minutos.",
   "from_you": "de ti",
-
   "enter_your_pick_up_point": "Ingrese su punto de recogida",
   "trip_location": "Ubicación del viaje",
   "pickup_time": "Hora de recogida",
@@ -1431,13 +1430,13 @@
   "make_payment": "Realizar pago",
   "select_from_map": "Seleccionar desde el mapa",
   "pickup_address": "Dirección de recogida",
-  "new_arrival" : "Recién llegado",
+  "new_arrival": "Recién llegado",
   "you_can_not_add_more_then": "No puede agregar más de",
   "you_cannot_select_before_current_time": "No puede seleccionar antes de la hora actual",
   "overall_rating": "Calificación general",
   "your_trip_is": "Su viaje es",
   "proceed": "Proceder",
-  "code" : "Código",
+  "code": "Código",
   "you_are_not_logged_in_to_explore_feature": "No has iniciado sesión. Para explorar esta función, por favor inicia sesión.",
   "set_pickup_location": "Establecer ubicación de recogida",
   "set_destination_location": "Establecer ubicación de destino",
@@ -1446,7 +1445,6 @@
   "trips": "Viajes",
   "your_cart_is_empty": "Tu carrito está vacío",
   "please_enter_valid_estimate_time": "Por favor, introduce un tiempo estimado válido",
-
   "payment_failed": "Pago fallido",
   "vendor_registration": "Registro de proveedor",
   "vendor_info": "Información del proveedor",
@@ -1497,5 +1495,35 @@
   "are_you_sure_you_want_to_update_trip_duration_to": "¿Estás seguro de que quieres actualizar la duración del viaje a",
   "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "Tu carrito ha sido vaciado porque la zona seleccionada no admite el punto de recogida anterior.",
   "you_cant_add_more_than": "No puedes añadir más de",
-  "quantities_of_this_vehicle": "Cantidades de este vehículo"
+  "quantities_of_this_vehicle": "Cantidades de este vehículo",
+  "please_enter_required_fields": "Por favor, introduzca los campos requeridos",
+  "user_name1": "Nombre de usuario",
+  "user_type": "Tipo de usuario",
+  "enter_code": "Introduzca el código",
+  "whatsApp_number": "Número de WhatsApp",
+  "alternate_whatsApp_number": "Número alternativo de WhatsApp",
+  "whatsApp_number_2": "Número de WhatsApp 2",
+  "alternate_phone": "Teléfono alternativo",
+  "phone_2": "Teléfono 2",
+  "landmark": "Punto de referencia",
+  "area": "Área",
+  "taluka": "Taluka",
+  "district": "Distrito",
+  "city": "Ciudad",
+  "state": "Estado",
+  "pincode": "Código postal",
+  "date_of_birth": "Fecha de nacimiento",
+  "select_your_dob": "Selecciona tu fecha de nacimiento",
+  "opens_at": "Abre a las",
+  "closes_at": "Cierra a las",
+  "route": "Ruta",
+  "subroute": "Subruta",
+  "zone_id": "ID de zona",
+  "gst_number": "Número GST",
+  "gst_no.": "Nº GST",
+  "pan_card_number": "Número de tarjeta PAN",
+  "pan_no.": "Nº PAN",
+  "upload_documents": "Subir documentos",
+  "pan_card": "Tarjeta PAN",
+  "shop_image": "Imagen de tienda"
 }
