--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1319,7 +1319,6 @@
   "enter_name": "أدخل الاسم",
   "timed_out_please_try_again_after_few_minutes": "انتهت المهلة. يرجى المحاولة مرة أخرى بعد بضع دقائق",
   "from_you": "منك",
-
   "enter_your_pick_up_point": "أدخل نقطة الاستلام",
   "trip_location": "موقع الرحلة",
   "pickup_time": "وقت الاستلام",
@@ -1431,13 +1430,13 @@
   "make_payment": "قم بالدفع",
   "select_from_map": "اختر من الخريطة",
   "pickup_address": "عنوان الاستلام",
-  "new_arrival" : "وصول جديد",
+  "new_arrival": "وصول جديد",
   "you_can_not_add_more_then": "لا يمكنك إضافة أكثر من",
   "you_cannot_select_before_current_time": "لا يمكنك الاختيار قبل الوقت الحالي",
   "overall_rating": "التقييم العام",
   "your_trip_is": "رحلتك هي",
   "proceed": "المتابعة",
-  "code" : "شفرة",
+  "code": "شفرة",
   "you_are_not_logged_in_to_explore_feature": "لم تقم بتسجيل الدخول. لاستكشاف هذه الميزة، يرجى تسجيل الدخول.",
   "set_pickup_location": "تعيين موقع الاستلام",
   "set_destination_location": "تعيين موقع الوجهة",
@@ -1446,7 +1445,6 @@
   "trips": "الرحلات",
   "your_cart_is_empty": "سلة التسوق الخاصة بك فارغة",
   "please_enter_valid_estimate_time": "يرجى إدخال وقت تقديري صالح",
-
   "payment_failed": "فشل الدفع",
   "vendor_registration": "تسجيل المورد",
   "vendor_info": "معلومات المورد",
@@ -1497,5 +1495,35 @@
   "are_you_sure_you_want_to_update_trip_duration_to": "هل أنت متأكد أنك تريد تحديث مدة الرحلة إلى",
   "your_cart_has_been_cleared_as_the_selected_zone_does_not_support_the_previous_pickup_point": "تم مسح سلة التسوق الخاصة بك لأن المنطقة المحددة لا تدعم نقطة الاستلام السابقة.",
   "you_cant_add_more_than": "لا يمكنك إضافة أكثر من",
-  "quantities_of_this_vehicle": "كميات هذه المركبة"
+  "quantities_of_this_vehicle": "كميات هذه المركبة",
+  "please_enter_required_fields": "يرجى إدخال الحقول المطلوبة",
+  "user_name1": "اسم المستخدم",
+  "user_type": "نوع المستخدم",
+  "enter_code": "أدخل الرمز",
+  "whatsApp_number": "رقم الواتساب",
+  "alternate_whatsApp_number": "رقم واتساب بديل",
+  "whatsApp_number_2": "رقم واتساب 2",
+  "alternate_phone": "هاتف بديل",
+  "phone_2": "الهاتف 2",
+  "landmark": "علامة مميزة",
+  "area": "المنطقة",
+  "taluka": "تالوكا",
+  "district": "المنطقة",
+  "city": "المدينة",
+  "state": "الولاية",
+  "pincode": "الرمز البريدي",
+  "date_of_birth": "تاريخ الميلاد",
+  "select_your_dob": "اختر تاريخ ميلادك",
+  "opens_at": "يفتح في",
+  "closes_at": "يغلق في",
+  "route": "الطريق",
+  "subroute": "الطريق الفرعي",
+  "zone_id": "معرف المنطقة",
+  "gst_number": "رقم ضريبة السلع والخدمات",
+  "gst_no.": "رقم ضريبة السلع والخدمات",
+  "pan_card_number": "رقم بطاقة PAN",
+  "pan_no.": "رقم PAN",
+  "upload_documents": "تحميل المستندات",
+  "pan_card": "بطاقة PAN",
+  "shop_image": "صورة المتجر"
 }
